scanner up to part g with 1 design choice not sure, asked on piazza

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,40 +2,179 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "exact-colorado",
+   "execution_count": 124,
+   "id": "single-dominant",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "id": "married-galaxy",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target = \"reddit.com\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "id": "english-aruba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "session = requests.Session()\n",
+    "session.max_redirects = 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "id": "alike-dryer",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "np\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    r = session.get(\"http://\" + target, timeout=5)\n",
+    "    print(\"np\")\n",
+    "except requests.TooManyRedirects as e:\n",
+    "    print(\"too many redirect\")\n",
+    "#except Exception as e:\n",
+    "    #print(\"aiya\")\n",
+    "    #print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "id": "congressional-north",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Namespace()"
+       "{'Connection': 'keep-alive', 'Cache-control': 'private, s-maxage=0, max-age=0, must-revalidate, no-store', 'Content-Encoding': 'gzip', 'Content-Type': 'text/html; charset=utf-8', 'X-Frame-Options': 'SAMEORIGIN', 'Accept-Ranges': 'bytes', 'Date': 'Thu, 11 Mar 2021 13:36:05 GMT', 'Via': '1.1 varnish', 'Vary': 'Accept-Encoding', 'Set-Cookie': 'loid=0000000000audonsur.2.1615469764000.Z0FBQUFBQmdTaHpFanltUWcwSDh6ajlMakp6Q2M3V1REdkstYzhrWU5YLTh4MkFZOElLSFJmSnpXWkdXUGsydHV1ZHk1MU9vaHZkWTZkQ0tQVTBwTll1cHNKdmlDMVdwdVNoU3Uzc3RSczktV3otQ193ZU9ubXkzaHk0UU43a3BtZzRQY2tEY0xTQVk; path=/; expires=Sat, 11 Mar 2023 13:36:04 GMT; domain=.reddit.com; secure; SameSite=None; Secure, session_tracker=mdifhriiaefclnmikp.0.1615469764084.Z0FBQUFBQmdTaHpFVGxxdmdCbkgxemFIRl9lQTgyZmQ4d3p6VkhGeVYxNkZIOXZFNm9EVXp2WHlOOTBrR1lGUVdIMC1DQWVGR0NidG5jU1M4cEdkdUpmbzB6NHpkbnBUc1RMNEVSQURBem9LNllaTTdRSmhiZjNXTWItWUNVbmM1Y3pPV2EyOEZtOXI; path=/; domain=.reddit.com; secure; SameSite=None; Secure, token_v2=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHAiOjE2MTU0NzMyNDQsInN1YiI6Ii0wdTdDX3VESXo2UGVwWnREVGFianhXX1dLU2siLCJsb2dnZWRJbiI6ZmFsc2UsInNjb3BlcyI6WyIqIiwiZW1haWwiXX0.0cD_8TFUCNEA_qIYeFqsgohDybgcfg3NbzxNiiopjls; Path=/; Domain=reddit.com; Expires=Sat, 11 Mar 2023 13:36:04 GMT; HttpOnly; Secure, csv=1; Max-Age=63072000; Domain=.reddit.com; Path=/; Secure; SameSite=None, edgebucket=jDE2thJVCc65hLbvEc; Domain=reddit.com; Max-Age=63071999; Path=/;  secure', 'Strict-Transport-Security': 'max-age=15552000; includeSubDomains; preload', 'Server': 'snooserv', 'transfer-encoding': 'chunked'}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import argparse\n",
-    "parser = argparse.ArgumentParser()\n",
-    "parser.parse_args(\"\")"
+    "r.history\n",
+    "r.headers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "id": "manual-listing",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 149,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'Strict-Transport-Security' in r.headers\n",
+    "#'server' in r.headers\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "tracked-limitation",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import socket"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "rubber-spanish",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    serverip = socket.gethostbyname(\"localhost\")\n",
+    "    port = 6789\n",
+    "except socket.gaierror:\n",
+    "    print('Hostname could not be resolved. Exiting')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "id": "enabling-atmosphere",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Port 6789: Open\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    sock = socket.socket(socket.AF_INET, socket.SOCK_STREAM)\n",
+    "    result = sock.connect_ex((serverip, port))\n",
+    "    if result == 0:\n",
+    "        print(\"Port {}: Open\".format(port))\n",
+    "    else:\n",
+    "        print(result)\n",
+    "    sock.close()\n",
+    "except Exception as e:\n",
+    "    print(\"Port {}: Closed\" .format(port))\n",
+    "    print(e.message)\n",
+    "    print('lol')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "subsequent-warning",
+   "id": "urban-recruitment",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import argparse\n",
-    "parser = argparse.ArgumentParser()\n",
-    "parser.add_argument(\"echo\")\n",
-    "args = parser.parse_args()\n",
-    "print(args.echo)"
+    " \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "increased-distance",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
