root ca also works. missing tls versions

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "single-dominant",
+   "id": "usual-leeds",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "married-galaxy",
+   "id": "copyrighted-portugal",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "english-aruba",
+   "id": "developmental-original",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "alike-dryer",
+   "id": "international-ensemble",
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "congressional-north",
+   "id": "brave-explorer",
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "id": "manual-listing",
+   "id": "innovative-angle",
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "tracked-limitation",
+   "id": "packed-projection",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "rubber-spanish",
+   "id": "incorporated-venice",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "enabling-atmosphere",
+   "id": "continuous-furniture",
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "urban-recruitment",
+   "id": "latter-transmission",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,10 +171,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "increased-distance",
+   "id": "spiritual-desperate",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def root_ca(target):\n",
+    "    try:\n",
+    "        result = subprocess.run([\"openssl\", query_type, target, dns], timeout=2, capture_output=True, text=True)"
+   ]
   }
  ],
  "metadata": {
